# v2rayp

./: Cargo.toml
src/: common.rs  core.rs  lib.rs  service.rs
src/core/: shadowsocks.rs
tests/: other.rs  uri.rs
