[package]
name = "v2rayp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
http = "0.2.8"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.92"
static_init = "1.0.3"
urlencoding = "2.1.2"
